@ refactor: 数据模型从内聚类拆分为独立文件 (model/ 与 dto/)
不引入 Lombok: record 已覆盖不可变模型, 两个可变模型用公有字段, 无样板可省;
Lombok 还需 IDEA 启用注解处理(常见报错源)且增加协作门槛, 与本项目自包含取向相悖。

core (com.wotb.core.model, 每个模型一个文件):
- Agg        <- Aggregator.Agg (lastTime 改 public 以便跨包访问)
- TankInfo   <- Tankopedia.TankInfo (构造器改 public)
- Source     <- Replays.Source
- Collected  <- Replays.Collected
web (com.wotb.web.dto, 拆掉 Dtos.java 容器):
- PlayerRow / BattleDto / AggRow / ColumnDef / PreviewResponse 各一个文件

- 全部引用点改导入新位置 (Aggregator/ExcelExporter/Mapper/Players/Tankopedia/Replays/ReplayController/ParityTest)
- 故意保留为嵌套的局部 DSL/配置: Columns.Col、ExcelExporter.AggCol/DCol、Mapper.AggCol、Rating.Config、ReplayController.SpringApplicationExit
- 顺手清掉 Columns/Protobuf/ReplayParser/ExcelExporter 注释里指向已删 Python 的残留
- 文档: DEVELOPER_GUIDE 目录树 + wotb-sync 配方 B 同步; Java 10/10 通过

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
@